# redshell-ws

./: .gitignore  .gitmodules  LICENSE  README.md
beboop_launch/: CMakeLists.txt  README.md
beboop_launch/include/: vs_control.hpp
beboop_launch/launch/: auto_sitl.launch  manual_sitl.launch  potentialfield_sitl.launch
beboop_launch/src/: beboop_motor_interface.hpp  vs_control.cpp
beboop_vision/: .gitignore  CMakeLists.txt  LICENSE  package.xml
beboop_vision/include/: beboop_vision.hpp  potential_field_driver.hpp  track_error_driver.hpp  vision_driver.hpp
beboop_vision/src/: beboop_vision.cpp  image_capture.cpp  potential_field_driver.cpp  track_error_driver.cpp  vision_driver.cpp
docker/: Dockerfile  compose.yaml
documentation/foxglove/: README.md  redshell.json
src/beboop_launch/: CMakeLists.txt  package.xml
src/beboop_launch/config/: state_estimation_params.yaml
src/beboop_launch/include/: occupancy_grid_helpers.h
src/beboop_launch/launch/: manual.launch  manual_sitl.launch.py  manual_sitl_1_cam.launch.py  manual_sitl_3_cam.launch.py  potentialfield_sitl.launch  potentialfield_sitl_3_cam.launch
src/beboop_launch/src/: beboop_motor_interface.cpp  occupancy_aggregator.cpp  occupancy_aggregator.hpp  vs_control.hpp
src/beboop_vision/: CMakeLists.txt  README.md
src/beboop_vision/include/: occupancy_grid_helpers.h
src/beboop_vision/src/: potential_field_driver.cpp  potential_field_driver.hpp  track_error_driver.hpp  vision_driver.hpp
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: auto.launch.py  manual.launch.py  sitl_auto.launch.py  sitl_manual.launch.py  sitl_manual_3_cam.launch.py  sitl_vs.launch.py  vs.launch.py
src/control/: CMakeLists.txt  package.xml
src/control/src/: pure_pursuit.cpp  pure_pursuit.h  pure_pursuit_node.cpp
src/occupancy_grid_aggregator/: CMakeLists.txt  package.xml
src/occupancy_grid_aggregator/src/: aggregator.cpp  aggregator.h  aggregator_node.cpp
src/occupancy_grid_aggregator_srv/: CMakeLists.txt  package.xml
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/src/: path_planner.cpp  path_planner.h  path_planner_node.cpp
src/redshell_bringup/: CMakeLists.txt  README.md  package.xml
src/redshell_bringup/config/: state_estimation_params.yaml
src/redshell_bringup/launch/: auto_sitl_1_cam.launch.py  manual.launch  manual.launch.py  manual_sitl.launch.py  manual_sitl_1_cam.launch.py  manual_sitl_3_cam.launch.py  potentialfield_sitl.launch  sitl_auto.launch.py  sitl_manual.launch.py  sitl_vs.launch.py  vs_sitl.launch
src/redshell_control/: CMakeLists.txt  package.xml
src/redshell_control/src/: pure_pursuit.cpp  pure_pursuit.h  pure_pursuit_node.cpp
src/redshell_guidance/: CMakeLists.txt  package.xml
src/redshell_guidance/src/: path_planner.cpp  path_planner.h  path_planner_node.cpp
src/redshell_io/: CMakeLists.txt  package.xml
src/redshell_io/include/: motor_interface.hpp  redshell_interface.h
src/redshell_io/src/: motor_interface.cpp  redshell_interface.cpp
src/redshell_vision/: CMakeLists.txt  README.md  package.xml
src/redshell_vision/src/: image_capture.hpp  potential_field_driver.cpp
src/state_estimation/: CMakeLists.txt  package.xml
src/state_estimation/launch/: state_estimation.launch.py
src/state_estimation/src/: ekf_supervisor.cpp  ekf_supervisor.h  ekf_supervisor_node.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/src/: arrownet_scripted.pt  image_capture.cpp  image_capture.hpp  potential_field_driver.cpp  potential_field_driver.hpp  track_error_driver.cpp  vision_driver.cpp  vision_driver.hpp
src/vision/src/classification/: arrow_classification.cpp
