<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>state_estimation</name>
  <version>0.0.0</version>
  <description>Contains bringup scripts and management nodes for the Redshell state estimation</description>
  <maintainer email="timothy.mead20@gmail.com">Timothy Mead</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>robot_localization</depend>
  <depend>occupancy_grid_aggregator_srv</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
